log
Thu 09 May 2024 02:14:08 AM UTC: 
 tests:  1|8
total_score: 0/70
adfa30b
Thu 09 May 2024 02:31:24 AM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
0604e24
Thu 09 May 2024 02:41:33 AM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
508adf5
Thu 09 May 2024 02:43:15 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|7
total_score: 5/70
379419f
Thu 09 May 2024 02:45:00 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
639dc7d
Thu 09 May 2024 02:48:37 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
6955e54
Thu 09 May 2024 02:49:52 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 20/70
20bad2d
Thu 09 May 2024 02:55:15 AM UTC: 
 treemap.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  9|5
total_score: 20/70
a135a3b
Thu 09 May 2024 02:55:38 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|5
total_score: 20/70
de779f4
Thu 09 May 2024 02:56:07 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
084f9ec
Thu 09 May 2024 02:57:14 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8a2ce7c
Thu 09 May 2024 03:26:27 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|5
total_score: 20/70
658adc2
Thu 09 May 2024 03:26:55 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
4f7eb07
Thu 09 May 2024 03:27:28 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
d9d74dd
Thu 09 May 2024 03:28:21 AM UTC: 
 treemap.c | 16 ----------------
 1 file changed, 16 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
780d86c
Thu 09 May 2024 03:28:29 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 20/70
ab06e51
Thu 09 May 2024 03:30:04 AM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  10|4
total_score: 20/70
c932c40
Thu 09 May 2024 03:30:38 AM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5a7d711
Thu 09 May 2024 03:30:46 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 20/70
0254d6a
Thu 09 May 2024 03:31:07 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  10|4
total_score: 20/70
b1efbbf
Thu 09 May 2024 03:33:39 AM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  11|4
total_score: 20/70
943bf8d
Thu 09 May 2024 03:34:02 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
886bcef
Thu 09 May 2024 03:35:14 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
d413f9f
Thu 09 May 2024 03:38:28 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
2e1deb1
Thu 09 May 2024 03:39:26 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
334c84e
